<resources>
    <string name="app_name">PlanetSushi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_shops">Shops</string>
    <string name="title_carts">Carte</string>
    <string name="title_panier">Panier</string>
    <string name="title_profile">Profil</string>
    <string name="valier">Valider</string>
    <string name="valider">Valider</string>

    <string name="facebook_app_id">2136051386659892</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_contacts">Rechercher une adresse</string>
    <string name="livraison">Livraison</string>

    <!-- permission -->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for corefunctionality.</string>
    <string name="settings">Settings</string>
    <string name="signup_agrement_one">En créant un compte, vous acceptez <u>nos conditions générales</u> et notre <u>politique de confidentialité</u></string>
    <string name="my_profile">Mon Profil</string>
    <string name="account_create_details">Créez votre compte en quelques secondes et rejoignez la team sushi lovers</string>
    <string name="google_login">CONNEXION GOOGLE</string>
    <string name="facebook_login">CONNEXION FACEBOOK</string>
    <string name="or">Ou</string>
    <string name="create_account">CRÉER UN COMPTE</string>
    <string name="already_have_account">Déjà un compte ? Se connecte</string>
    <string name="free_text">Choisissez vos (freeItems) sauce(s) gratuite(s), wasabi, gingembre et baguettes. Compléter votre commande d\'un accompagnement, d\'une boisson ou d\'un dessert. Sauce(s) offertes</string>

    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>

    <string name="reductions">Reductions</string>
    <string name="selectionner_ou_ajouter_un_code">Selectionner ou ajouter un code</string>
    <string name="ajouter_un_code">+Ajouter un code</string>
    <string name="utiliser_un_autre_code">Utiliser un autre code</string>
    <string name="appliquer">Appliquer</string>
    <string name="enregistrer">Enregistrer</string>

    <!--Related to Adyen Payment-->
    <string name="check_out_payment_success">Payment Success.</string>
    <string name="check_out_payment_failure">Payment Failure.</string>

    <string name="check_out_adyen_payment_verify_success_1">Payment is</string>
    <string name="check_out_adyen_payment_verify_success_2">and verified.</string>
    <string name="check_out_adyen_payment_verify_failure">Failed to verify payment.</string>

    <!--Related to Merchandise Fragment-->
    <string name="merchandise_list_empty">No Merchandise Found</string>

</resources>
