<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shops"
        android:title="@string/title_shops" />

    <item
        android:id="@+id/navigation_carts"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_carts" />

    <item
        android:id="@+id/navigation_panier"
        android:icon="@drawable/ic_panie"
        android:title="@string/title_panier" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
