<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_home_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <View
                    android:id="@+id/profile_container"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/dp40"
                    android:background="@drawable/drawable_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_profile_white"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_container"
                    app:layout_constraintEnd_toEndOf="@+id/profile_container"
                    app:layout_constraintStart_toStartOf="@+id/profile_container"
                    app:layout_constraintTop_toTopOf="@+id/profile_container" />


                <TextView
                    android:id="@+id/text_view_my_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp16"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/my_profile"
                    android:textColor="#1A4B6C"
                    android:textSize="@dimen/sp24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_container" />

                <TextView
                    android:id="@+id/text_view_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp8"
                    android:layout_marginEnd="@dimen/dp32"
                    android:fontFamily="@font/robot_regular"
                    android:lines="2"
                    android:text="@string/account_create_details"
                    android:textColor="#386d91"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_my_profile" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp32"
                    android:layout_marginBottom="@dimen/dp5"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/color_darker_gray_70"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_details">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="@dimen/dp10"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/dp10"
                        android:textColor="@color/color_darker_gray"
                        android:textSize="@dimen/sp17" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp8"
                    android:layout_marginEnd="@dimen/dp32"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/color_darker_gray_70"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_email">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="@dimen/dp10"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="Mot de passe"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp10"
                        android:textColor="@color/color_darker_gray"
                        android:textSize="@dimen/sp17" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@drawable/bg_login"
                    android:text="SE CONNECTER"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
                    app:layout_constraintStart_toStartOf="@+id/input_layout_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
                    app:layout_goneMarginTop="@dimen/dp8" />


                <TextView
                    android:id="@+id/text_view_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/or"
                    android:textColor="@color/colorDarkBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_login" />

                <View
                    android:id="@+id/separator_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dp4"
                    android:background="@color/color_separator"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_or"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_or"
                    app:layout_constraintStart_toStartOf="@+id/input_layout_password"
                    app:layout_constraintTop_toTopOf="@+id/text_view_or" />

                <View
                    android:id="@+id/separator_2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dp4"
                    android:layout_marginEnd="@dimen/dp4"
                    android:background="@color/color_separator"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_or"
                    app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
                    app:layout_constraintStart_toEndOf="@+id/text_view_or"
                    app:layout_constraintTop_toTopOf="@+id/text_view_or" />

                <Button
                    android:id="@+id/button_create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@drawable/bg_create_account"
                    android:text="@string/create_account"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
                    app:layout_constraintStart_toStartOf="@+id/input_layout_password"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_or" />


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</layout>